[package]
name = "multi-person"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }
candle-core = "0.9.0"
candle-nn = "0.9.0"
tract-onnx = "0.21"
image = "0.25"
imageproc = "0.25"
once_cell = "1.21"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.10"
thiserror = "2.0"
anyhow = "1.0"